test/negative/invalid-wordcount-constant.spt
; OpConstant minimum = 4 (header + result-type + result-id + value-word);
; WordCount=2 is malformed (below FixedWC=3 for SPIRVConstantBase).
; Test that malformed input is rejected early rather than silently causing
; integer underflow and potential process hang.

; RUN: not llvm-spirv %s -to-binary -o %t.spv 2>&1 | FileCheck %s
; CHECK: InvalidWordCount:

119734787 65536 0 4 0
2 Capability Kernel
3 MemoryModel 1 2
3 TypeInt 3 32 0
2 Constant 3 5
